# simpleTodo_fastAPI

./: LICENSE  README.md  pyproject.toml
simple_todo/: app.py
tests/: conftest.py  test_app.py
