[project]
name = "simple_todo"
version = "0.1.0"
description = ""
authors = [
    {name = "Leonardo Bagio",email = "leobagio2009@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "alembic (>=1.18.5,<2.0.0)",
    "fastapi[standard] (>=0.139.0,<0.140.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "sqlalchemy[asyncio] (>=2.0.51,<3.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "tzdata (>=2026.3,<2027.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.22,<0.16.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = ['.']
addopts = ['-p', 'no:warnings', '--cov=fast_zero', '--cov-context=test']

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev simple_todo/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=simple_todo -vv'
post_test = 'coverage html'